increate java memory for gwt compiler